--- a/frontend-react-js/.gitignore
+++ b/frontend-react-js/.gitignore
@@ -23,7 +23,7 @@ lib-cov
 coverage
 *.lcov
 
-# nyc ***REMOVED*** coverage
+# nyc test coverage
 .nyc_output
 
 # Grunt intermediate storage (https://gruntjs.com/creating-plugins#storing-task-files)
@@ -75,7 +75,7 @@ web_modules/
 # dotenv environment variable files
 .env
 .env.development.local
-.env.***REMOVED***.local
+.env.test.local
 .env.production.local
 .env.local
 
@@ -119,8 +119,8 @@ dist
 # TernJS port file
 .tern-port
 
-# Stores VSCode versions used for ***REMOVED***ing VSCode extensions
-.vscode-***REMOVED***
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
 
 # yarn v2
 .yarn/cache
