--- a/frontend-react-js/package.json
+++ b/frontend-react-js/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@***REMOVED***ing-library/jest-dom": "^5.16.5",
-    "@***REMOVED***ing-library/react": "^13.4.0",
-    "@***REMOVED***ing-library/user-event": "^13.5.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "js-cookie": "^3.0.1",
     "luxon": "^3.1.0",
     "process": "^0.11.10",
@@ -18,7 +18,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "***REMOVED***": "react-scripts ***REMOVED***",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
